src/app/components/flyover-controls/flyover-controls.component.scss
@use "../../../styles";
@use "../../../sizes";

.component-container {
  margin-top: 4px;
  padding: 4px;
  border-radius: 8px;

  background: var(
    --mat-toolbar-container-background-color,
    var(--mat-sys-surface)
  );
}

.button-container {
  width: 48px;
}

.full-width {
  width: 100%;
}

